--- a/web/ja/manual/function/genbafit/runtimefit/sequencecache/index.html
+++ b/web/ja/manual/function/genbafit/runtimefit/sequencecache/index.html
@@ -31,7 +31,7 @@
 	<p>
 		ドキュメントが整備されるまで、ブログ記事、および、dfpropのページをご覧下さい。
 	</p>
-	<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20100119/1263871052">外部サイト - jfluteの日記 - DBFluteはシーケンスのキャッシュ機能を装備した</a></div>
+	<div class="detailpage"><a href="https://jflute.hatenadiary.jp/entry/20100119/1263871052">外部サイト - jfluteの日記 - DBFluteはシーケンスのキャッシュ機能を装備した</a></div>
 	<div class="detailpage"><a href="../../../../reference/dfprop/sequencedefinition/index.html">sequenceDefinitionMap.dfprop</a></div>
 	${indexlist}
 
